# Audio-USB-DAC

./: .gitignore
SAME70/DAC_FIRMWARE/DAC_FIRMWARE/: CMakeLists.txt  USB_AUDIO.code-workspace
SAME70/DAC_FIRMWARE/DAC_FIRMWARE/inc/: std_inc.h
SAME70/DAC_FIRMWARE/DAC_FIRMWARE/inc/usb/: usb_aud_ctr.h  usb_core.h  usb_defs.h  usb_desc.h
SAME70/DAC_FIRMWARE/DAC_FIRMWARE/src/: main.c  startup_same70.c  timers.c
SAME70/DAC_FIRMWARE/DAC_FIRMWARE/src/usb/: usb_aud_ctr.c  usb_core.c
STM_FW/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Makefile  STM32F730I8KX_FLASH.ld  STM32F730I8KX_RAM.ld  STM_FW.ioc  arm-none-eabi-gcc.cmake  cmake_install.cmake  format.sh
STM_FW/Application/User/Core/: syscalls.c  sysmem.c
STM_FW/Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
STM_FW/Core/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c  system_stm32f7xx.c
STM_FW/Debug/: makefile  objects.list  sources.mk
STM_FW/Debug/Application/User/Core/: subdir.mk
STM_FW/Debug/Application/User/Startup/: subdir.mk
STM_FW/Debug/Application/User/USB_DEVICE/App/: subdir.mk
STM_FW/Debug/Application/User/USB_HOST/App/: subdir.mk
STM_FW/Debug/Core/Src/: subdir.mk
STM_FW/Debug/Drivers/CMSIS/: subdir.mk
STM_FW/Debug/Drivers/CMSIS/Core_A/Source/: subdir.mk
STM_FW/Debug/Drivers/CMSIS/RTOS2/Source/: subdir.mk
STM_FW/Debug/Drivers/CMSIS/RTOS2/Template/: subdir.mk
STM_FW/Debug/Drivers/STM32F7xx_HAL_Driver/: subdir.mk
STM_FW/Debug/Drivers/STM32F7xx_HAL_Driver/Src/: subdir.mk
STM_FW/Debug/EWARM/: subdir.mk
STM_FW/Debug/Middlewares/USB_Device_Library/: subdir.mk
STM_FW/Debug/Middlewares/USB_Host_Library/: subdir.mk
STM_FW/Debug/USB_DEVICE/App/: subdir.mk
STM_FW/Drivers/CMSIS/Core/Include/: cmsis_armcc.h  cmsis_iccarm.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm1.h  core_cm4.h  core_cm7.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h
STM_FW/Drivers/CMSIS/Core_A/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_compiler.h  cmsis_cp15.h  cmsis_gcc.h  cmsis_iccarm.h  core_ca.h  irq_ctrl.h
STM_FW/Drivers/CMSIS/Core_A/Source/: irq_ctrl_gic.c
STM_FW/Drivers/CMSIS/DSP/Include/: arm_common_tables.h  arm_math.h
STM_FW/Drivers/CMSIS/DSP/Source/BasicMathFunctions/: arm_abs_f32.c  arm_abs_q15.c  arm_abs_q31.c  arm_abs_q7.c  arm_add_f32.c  arm_add_q15.c  arm_add_q31.c  arm_add_q7.c  arm_dot_prod_f32.c  arm_dot_prod_q15.c  arm_dot_prod_q31.c  arm_dot_prod_q7.c  arm_mult_f32.c  arm_mult_q15.c  arm_mult_q31.c  arm_mult_q7.c  arm_negate_f32.c  arm_negate_q15.c  arm_negate_q31.c  arm_negate_q7.c  arm_offset_f32.c  arm_offset_q15.c  arm_offset_q31.c  (+12 more)
STM_FW/Drivers/CMSIS/Include/: cmsis_armclang.h  cmsis_gcc.h  core_cm0plus.h  core_cm23.h  core_cm3.h  core_cm33.h  core_sc000.h
STM_FW/Drivers/CMSIS/RTOS/Template/: cmsis_os.h
STM_FW/Drivers/CMSIS/RTOS2/Include/: cmsis_os2.h
STM_FW/Drivers/CMSIS/RTOS2/Source/: os_systick.c  os_tick_gtim.c  os_tick_ptim.c
STM_FW/Drivers/CMSIS/RTOS2/Template/: cmsis_os.h  cmsis_os1.c
STM_FW/Drivers/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal.h  stm32f7xx_hal_cortex.h  stm32f7xx_hal_def.h  stm32f7xx_hal_dma.h  stm32f7xx_hal_dma_ex.h  stm32f7xx_hal_exti.h  stm32f7xx_hal_flash.h  stm32f7xx_hal_flash_ex.h  stm32f7xx_hal_gpio.h  stm32f7xx_hal_gpio_ex.h  stm32f7xx_hal_i2c.h  stm32f7xx_hal_i2c_ex.h  stm32f7xx_hal_i2s.h  stm32f7xx_hal_pcd.h  stm32f7xx_hal_pcd_ex.h  stm32f7xx_hal_pwr.h  stm32f7xx_hal_pwr_ex.h  stm32f7xx_hal_qspi.h  stm32f7xx_hal_rcc.h  stm32f7xx_hal_rcc_ex.h  stm32f7xx_hal_sram.h  stm32f7xx_hal_tim.h  stm32f7xx_hal_tim_ex.h  stm32f7xx_hal_wwdg.h  stm32f7xx_ll_fmc.h  stm32f7xx_ll_usb.h
STM_FW/Drivers/STM32F7xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
STM_FW/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal.c  stm32f7xx_hal_cortex.c  stm32f7xx_hal_dma.c  stm32f7xx_hal_dma_ex.c  stm32f7xx_hal_exti.c  stm32f7xx_hal_flash.c  stm32f7xx_hal_flash_ex.c  stm32f7xx_hal_gpio.c  stm32f7xx_hal_i2c.c  stm32f7xx_hal_i2c_ex.c  stm32f7xx_hal_i2s.c  stm32f7xx_hal_pcd.c  stm32f7xx_hal_pcd_ex.c  stm32f7xx_hal_pwr.c  stm32f7xx_hal_pwr_ex.c  stm32f7xx_hal_qspi.c  stm32f7xx_hal_rcc.c  stm32f7xx_hal_rcc_ex.c  stm32f7xx_hal_sram.c  stm32f7xx_hal_tim.c  stm32f7xx_hal_tim_ex.c  stm32f7xx_hal_wwdg.c  stm32f7xx_ll_fmc.c  stm32f7xx_ll_usb.c
STM_FW/EWARM/: Project.eww  STM_FW.ewd  STM_FW.ewp
STM_FW/USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_audio_if.c  usbd_audio_if.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c  usbd_desc.h
(+755 files in other folders)
